skins/modern/main.css
/* ... */
#preftoc li.selected a,
#preftoc li.selected a:hover,
#preftoc li.selected a:visited {
	text-decoration: none;
	color: white;
}

#mw_content a.external,
#mw_content a[href ^="gopher://"] {
        background: url(external.png) center right no-repeat;
        padding-right: 13px;
}
#mw_content a[href ^="https://"],
.link-https {
        background: url(lock_icon.gif) center right no-repeat;
        padding-right: 16px;
}
#mw_content a[href ^="mailto:"],
.link-mailto {
        background: url(mail_icon.gif) center right no-repeat;
        padding-right: 18px;
}
#mw_content a[href ^="news://"] {
        background: url(news_icon.png) center right no-repeat;
        padding-right: 18px;
}
#mw_content a[href ^="ftp://"],
.link-ftp {
        background: url(file_icon.gif) center right no-repeat;
        padding-right: 18px;
}
#mw_content a[href ^="irc://"],
#mw_content a.extiw[href ^="irc://"],
.link-irc {
        background: url(discussionitem_icon.gif) center right no-repeat;
        padding-right: 18px;
}

#mw_content a.external[href $=".ogg"], #mw_content a.external[href $=".OGG"],
#mw_content a.external[href $=".mid"], #mw_content a.external[href $=".MID"],
#mw_content a.external[href $=".midi"], #mw_content a.external[href $=".MIDI"],
#mw_content a.external[href $=".mp3"], #mw_content a.external[href $=".MP3"],
#mw_content a.external[href $=".wav"], #mw_content a.external[href $=".WAV"],
#mw_content a.external[href $=".wma"], #mw_content a.external[href $=".WMA"],
.link-audio {
        background: url("audio.png") center right no-repeat;
        padding-right: 13px;
}
#mw_content a.external[href $=".ogm"], #mw_content a.external[href $=".OGM"],
#mw_content a.external[href $=".avi"], #mw_content a.external[href $=".AVI"],
#mw_content a.external[href $=".mpeg"], #mw_content a.external[href $=".MPEG"],
#mw_content a.external[href $=".mpg"], #mw_content a.external[href $=".MPG"],
.link-video {
        background: url("video.png") center right no-repeat;
        padding-right: 13px;
}
#mw_content a.external[href $=".pdf"], #mw_content a.external[href $=".PDF"],
#mw_content a.external[href *=".pdf#"], #mw_content a.external[href *=".PDF#"],
#mw_content a.external[href *=".pdf?"], #mw_content a.external[href *=".PDF?"],
.link-document {
        background: url("document.png") center right no-repeat;
        padding-right: 12px;
}

/* images */
div.floatright, table.floatright {
	clear: right;
	float: right;
	position: relative;
	margin: 0 0 .5em .5em;
	border: 0;
/*
	border: .5em solid white;
	border-width: .5em 0 .8em 1.4em;
*/
}
div.floatright p { font-style: italic; }
div.floatleft, table.floatleft {
	float: left;
	clear: left;
	position: relative;
	margin: 0 .5em .5em 0;
	border: 0;
/*
	margin: .3em .5em .5em 0;
	border: .5em solid white;
	border-width: .5em 1.4em .8em 0;
*/
}
div.floatleft p { font-style: italic; }
/* thumbnails */
div.thumb {
	margin-bottom: .5em;
	border-style: solid;
	border-color: white;
	width: auto;
}
div.thumbinner {
	border: 1px solid #ccc;
	padding: 3px !important;
	background-color: #f9f9f9;
	font-size: 94%;
	text-align: center;
	overflow: hidden;
}
html .thumbimage {
	border: 1px solid #ccc;
}
html .thumbcaption {
	border: none;
	text-align: left;
	line-height: 1.4em;
	padding: 3px !important;
	font-size: 94%;
}
div.magnify {
	float: right;
	border: none !important;
	background: none !important;
}
div.magnify a, div.magnify img {
	display: block;
	border: none !important;
	background: none !important;
}
div.tright {
	clear: right;
	float: right;
	border-width: .5em 0 .8em 1.4em;
}
div.tleft {
	float: left;
	clear: left;
	margin-right: .5em;
	border-width: .5em 1.4em .8em 0;
}
img.thumbborder {
	border: 1px solid #dddddd;
}
.hiddenStructure {
	display: none;
}

#mw_content .plainlinks a {
        background: none !important;
        padding: 0 !important;
}

.mw-warning {
	border: 1px solid #aaa;
	background-color: #f9f9f9;
	padding: 5px;
	font-size: 95%;
}

#toc,
.toc {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
	border-spacing: 0;
	background-color: #f0f0f0;
	border: solid 1px #bbbbbb;
}

#toc tr, #toc td {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
}

#toctitle {
	border-bottom: solid 1px #3c78b5;
	background-color: #dddddd;
	margin: 0 0 0 0;
}

#toc h2,
.toc h2 {
	display: inline;
	border: none;
	padding: 0;
	font-size: 100%;
	font-weight: bold;
}
#toc #toctitle,
.toc #toctitle,
#toc .toctitle,
.toc .toctitle {
	text-align: center;
}

#toc ul,
.toc ul {
	list-style-type: none;
	list-style-image: none;
	margin: 0 1em 0 1em;
	padding-left: 0;
	text-align: left;
}

#toc ul ul,
.toc ul ul {
	margin: 0 0 0 2em;
}

#toc .toctoggle,
.toc .toctoggle {
	font-size: 94%;
}

.mw-warning {
	margin-left: 50px;
	margin-right: 50px;
	text-align: center;
}

.catlinks {
	border: solid 1px #bbbbbb;
	background-color: #f0f0f0;
	padding: 0.5em 0.5em 0.5em 0.5em;
	margin: 0 0 0 0;
}

.catlinks {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
}

#mw_header h1,
#p-personal,
#p-cactions {
	overflow: hidden;
}

/* disable interwiki styling */
#mw_content a.extiw,
#mw_content a.extiw:active {
	color: #36b;
	background: none;
	padding: 0;
}
#mw_content a.external {
	color: #36b;
}



.redirectText {
	font-size: 150%;
	margin: 5px;
}

.printfooter {
	display: none;
}

.not-patrolled {
	background-color: #ffa;
}
div.patrollink {
	font-size: 75%;
	text-align: right;
}
span.newpage, span.minor, span.bot {
	font-weight: bold;
}
span.unpatrolled {
	font-weight: bold;
	color: red;
}

.sharedUploadNotice {
	font-style: italic;
}

span.updatedmarker {
	color: black;
	background-color: #0f0;
}

table.gallery {
	border: 1px solid #ccc;
	margin: 2px;
	padding: 2px;
	background-color: white;
}

table.gallery tr {
	vertical-align: top;
}

table.gallery td {
	vertical-align: top;
	background-color: #f9f9f9;
	border: solid 2px white;
}
/* Keep this temporarily so that cached pages will display right */
table.gallery td.galleryheader {
    text-align: center;
	font-weight: bold;
}
/* ... */

